--- a/projet-non-guider/.github/workflows/ci.yml
+++ b/projet-non-guider/.github/workflows/ci.yml
@@ -3,14 +3,16 @@ on: [push, pull_request]
 jobs:
   build:
     runs-on: ubuntu-latest
+    name: Build and Test  # Nom du job
     steps:
     - uses: actions/checkout@v2
     - name: Set up CMake
+
       uses: lukka/get-cmake@v3
     - name: Configure and build
       run: |
         cmake -S . -B build
-        cmake --build build 
+        cmake --build build
     - name: Run tests
       run: |
         cd build
@@ -18,7 +20,7 @@ jobs:
     - name: Generate Doxygen documentation
       run: |
         cd build
-        make doc_doxygen   
+        make doc_doxygen
     - name: Deploy documentation to GitHub Pages
       if: success()
       uses: peaceiris/actions-gh-pages@v3
